feat: domain membership
